<resources>
    <string name="app_name">HOUSE KEEPER</string>
    <string name="eng_app_name">HOUSE KEEPER</string>

    <!--login-->
    <string name="autologin">AUTO LOG IN</string>
    <string name="login">LOG IN</string>
    <string name="register">Sign Up</string>

    <!--register-->
    <string name="mem_id">USER ID</string>
    <string name="mem_pw">PASSWORD</string>
    <string name="mem_pwcheck">PASSWORD CHECK</string>
    <string name="mem_name">USER NAME</string>
    <string name="mem_phone">USER PHONE</string>
    <string name="mem_emergency">EMERGENCY PHONE</string>

    <!--addwork cctv dialog-->
    <string name="cctvlist_cctvnum">CCTV ID : </string>
    <string name="cctvlist_cctvpw">CCTV PW : </string>
    <string name="cctvlist_name">CCTV NAME : </string>
    <string name="cctvlist_place">CCTV PLACE : </string>
    <string name="cctvlist_special">OTHER : </string>
    <string name="save">SAVE</string>
    <string name="cancel">"CANCEL"</string>

    <!--emergencylayout-->
    <string name="emergency">REPORT EMERGENCY</string>

    <!--setting-->
    <string name="Setting_1">LOG OUT</string>
    <string name="Setting_2">MODIFICATION MEMBER INFORMATION</string>
    <string name="Setting_3">DELETE MEMBER INFORMATION</string>

    <!--modification-->
    <string name="update">MODIFICATION</string>

    <!--actionbar-->
    <string name="cctv_actionbar">CCTV LIST</string>
    <string name="record_actionbar">REPORT RECORD</string>
    <string name="setting_actionbar">SETTING</string>

    <!--main-->
    <string name="main_cctv">CCTV</string>
    <string name="main_cctv_sub">Show you your CCTV screen through streaming</string>
    <string name="main_record">RECORD</string>
    <string name="main_record_sub">Show you the records of the rescue request detection, etc</string>
    <string name="main_setting">SETTING</string>
    <string name="main_cctvplace">"CCTV 설치 장소 : "</string>
    <string name="main_cctvstate">"CCTV 상태 : "</string>
    <string name="main_cctvconnect">"CCTV 연동 : "</string>
    <string name="main_recordreport">\u003C주요 감지 사항\u003E</string>
    <string name="main_blind">Blind Mode</string>
    <string name="main_autoreport">Auto - Emergency Report</string>
</resources>