<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".others.SettingActivity">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/edge">

        <TextView
            android:id="@+id/Setting_1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10sp"
            android:gravity="center_vertical"
            android:text="@string/Setting_1"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/edge">

        <TextView
            android:id="@+id/Setting_2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10sp"
            android:gravity="center_vertical"
            android:text="@string/Setting_2"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/edge">

        <TextView
            android:id="@+id/Setting_3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginStart="10sp"
            android:gravity="center_vertical"
            android:text="@string/Setting_3"
            android:textColor="@color/red"
            android:textSize="20sp"
            android:textStyle="bold" />
    </TableRow>


</TableLayout>