<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".others.MainActivity"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true">

        <ImageView
            android:id="@+id/main_icon"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:srcCompat="@drawable/app_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <ImageView
            android:id="@+id/main_btn_notification"
            android:layout_width="40dp"
            android:layout_height="40dp"
            app:srcCompat="@drawable/ic_notification"
            app:layout_constraintTop_toTopOf="@+id/main_icon"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/main_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratsemibold"
            android:text="@string/eng_app_name"
            android:textColor="@color/white"
            android:textSize="22dp"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/main_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <LinearLayout
            android:id="@+id/main_layout_cctv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/main_icon_gradaition"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintTop_toBottomOf="@id/main_app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_cctv"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_cctv"
                    android:fontFamily="@font/montserratextrabold"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_cctv_sub"
                    android:fontFamily="@font/montserratlight"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:layout_marginBottom="5dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_layout_record"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/main_icon_gradaition"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintTop_toBottomOf="@id/main_layout_cctv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_record"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_record"
                    android:fontFamily="@font/montserratextrabold"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:layout_marginTop="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_record_sub"
                    android:fontFamily="@font/montserratlight"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:layout_marginBottom="5dp"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_layout_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/main_icon_gradaition"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintTop_toBottomOf="@id/main_layout_record"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                app:srcCompat="@drawable/ic_setting" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_setting"
                    android:fontFamily="@font/montserratextrabold"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:layout_marginTop="5dp"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_layout_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintTop_toBottomOf="@id/main_layout_setting"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yun340"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:text="@string/main_cctvplace" />
                <TextView
                    android:id="@+id/main_info_place"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yun340"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:text="경기도 광명시\n맑음 11C/ 24C" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yun340"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:text="@string/main_cctvstate" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yun340"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:text="작동 중" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yun340"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:text="@string/main_cctvconnect" />
                <TextView
                    android:id="@+id/main_info_connect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yun340"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:text="2" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yun340"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:text=" 대" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yun320"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:text="@string/main_recordreport" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yun320"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:text="2020.10.18 13:24" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yun320"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:text=" " />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yun320"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:text="마지막 움직임 감지" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yun320"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:text="2020.10.18 15:09" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yun320"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:text=" " />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/yun320"
                    android:textColor="@color/white"
                    android:textSize="12dp"
                    android:text="움직임 감지" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_layout_blind"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/main_icon_gradaition"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintTop_toBottomOf="@id/main_layout_info"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Switch
                android:id="@+id/main_switch_blind"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:track="@drawable/switch_track_selector"
                android:thumb="@drawable/switch_thumb_selector"
                android:checked="true"
                android:fontFamily="@font/montserratextrabold"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/main_blind"
                android:textColor="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/main_layout_autoreport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/main_icon_gradaition"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintTop_toBottomOf="@id/main_layout_blind"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <Switch
                android:id="@+id/main_switch_autoreport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:track="@drawable/switch_track_selector"
                android:thumb="@drawable/switch_thumb_selector"
                android:checked="true"
                android:fontFamily="@font/montserratextrabold"
                android:orientation="horizontal"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:textSize="20dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/main_autoreport"
                android:textColor="@color/white" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</RelativeLayout>